--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,7 +8,7 @@
   <meta name="description" content="{% if site.description %}{{ site.description }}{% endif %}">
 
   <link rel="stylesheet" href="css/main.css">
-  <link rel="canonical" href="{{ page.url | replace:'/index.html','' | prepend: site.baseurl | prepend: site.url }}">
+  <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 
   <link rel="apple-touch-icon" sizes="57x57" href="images/favicons/apple-touch-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="images/favicons/apple-touch-icon-60x60.png">
